result/0619-201220/stderr.log
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/features.c:304:6: error: redefinition of ‘max_pixel’
  304 | void max_pixel (char *source_path) {
      |      ^~~~~~~~~
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/features.c:271:6: note: previous definition of ‘max_pixel’ with type ‘void(char *)’
  271 | void max_pixel (char *source_path) {
      |      ^~~~~~~~~
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/features.c: In function ‘rotate_cw’:
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/features.c:343:40: warning: implicit declaration of function ‘malloc’ [-Wimplicit-function-declaration]
  343 |         target_data = (unsigned char *)malloc(width * height * nbChannels * sizeof(unsigned char));
      |                                        ^~~~~~
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/features.c:6:1: note: include ‘<stdlib.h>’ or provide a declaration of ‘malloc’
    5 | #include "utils.h"
  +++ |+#include <stdlib.h>
    6 | 
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/features.c:343:40: warning: incompatible implicit declaration of built-in function ‘malloc’ [-Wbuiltin-declaration-mismatch]
  343 |         target_data = (unsigned char *)malloc(width * height * nbChannels * sizeof(unsigned char));
      |                                        ^~~~~~
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/features.c:343:40: note: include ‘<stdlib.h>’ or provide a declaration of ‘malloc’
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/features.c:365:9: warning: implicit declaration of function ‘free’ [-Wimplicit-function-declaration]
  365 |         free(source_data);
      |         ^~~~
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/features.c:365:9: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/features.c:365:9: warning: incompatible implicit declaration of built-in function ‘free’ [-Wbuiltin-declaration-mismatch]
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/features.c:365:9: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
gmake[2]: *** [CMakeFiles/freud.dir/build.make:93: CMakeFiles/freud.dir/src/features.c.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/main.c: In function ‘main’:
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/main.c:119:1: error: expected declaration or statement at end of input
  119 | }
      | ^
gmake[2]: *** [CMakeFiles/freud.dir/build.make:107: CMakeFiles/freud.dir/src/main.c.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/freud.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2

The process '/usr/local/bin/cmake' failed with exit code 2